Add profile name

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h2>HACKTOBERFEST 2K19 CONTRIBUTORS</h2>
         <ul class="list-group">
             <li href="#" class="list-group-item">Juan dela Cruz</li>
+            <li href="#" class="list-group-item">Christian Mae Mendez</li>
         </ul>
     </div>
 
