--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <ul class="list-group">
             <li href="#" class="list-group-item">Juan dela Cruz</li>
             <li href="#" class="list-group-item">Christian Mae Mendez</li>
+            <li href="#" class="list-group-item">Theressa Marie Tan</li>
         </ul>
     </div>
 
