--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="container">
         <h2>HACKTOBERFEST 2K19 CONTRIBUTORS</h2>
         <ul class="list-group">
-            <li href="#" class="list-group-item">Juan dela Cruz</li>
-            <li href="#" class="list-group-item">Christian Mae Mendez</li>
+            <li href="https://github.com/jerumbaoa" class="list-group-item">Jerome Rumbaoa</li>
+            <li href="https://github.com/ChristianMae" class="list-group-item">Christian Mae Mendez</li>
         </ul>
     </div>
 
