--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <ul class="list-group">
             <li href="https://github.com/jerumbaoa" class="list-group-item">Jerome Rumbaoa</li>
             <li href="https://github.com/ChristianMae" class="list-group-item">Christian Mae Mendez</li>
+            <li href="https://github.com/tmttan03" class="list-group-item">Theressa Marie Tan</li>
         </ul>
     </div>
 
