--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li href="https://github.com/ChristianMae" class="list-group-item">Christian Mae Mendez</li>
             <li href="https://github.com/tmttan03" class="list-group-item">Theressa Marie Tan</li>
             <li href="https://github.com/sannycand" class="list-group-item">Sanny Candidier</li>
+            <li href="https://github.com/Chibi-Shem" class="list-group-item">Shem Ipanag</li>
         </ul>
     </div>
 
