--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li href="https://github.com/tmttan03" class="list-group-item">Theressa Marie Tan</li>
             <li href="https://github.com/sannycand" class="list-group-item">Sanny Candidier</li>
             <li href="https://github.com/Chibi-Shem" class="list-group-item">Shem Ipanag</li>
+            <li href="https://github.com/Chibi-Shem" class="list-group-item">CJ Dango</li>
         </ul>
     </div>
 
