--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li href="https://github.com/Chibi-Shem" class="list-group-item">Shem Ipanag</li>
             <li href="https://github.com/cjdango" class="list-group-item">CJ Dango</li>
             <li href="https://github.com/antonsison" class="list-group-item">Anton Sison</li>
+            <li href="https://github.com/melchiaballe" class="list-group-item">Melchi Lloyd Aballe</li>
         </ul>
     </div>
 
