--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li href="https://github.com/cjdango" class="list-group-item">CJ Dango</li>
             <li href="https://github.com/antonsison" class="list-group-item">Anton Sison</li>
             <li href="https://github.com/melchiaballe" class="list-group-item">Melchi Lloyd Aballe</li>
+            <li href="https://github.com/kerstiner" class="list-group-item">Kerstine Rodilla</li>
         </ul>
     </div>
 
