--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <h2>HACKTOBERFEST 2K20 CONTRIBUTORS</h2>
           <ul class="list-group">
               <li href="https://github.com/jerumbaoa" class="list-group-item">Jerome Rumbaoa</li>
+              <li href="https://github.com/melchiaballe" class="list-group-item">Melchi Lloyd Aballe</li>
           </ul>
       </div>
 
