--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
               <li href="https://github.com/jerumbaoa" class="list-group-item">Jerome Rumbaoa</li>
               <li href="https://github.com/melchiaballe" class="list-group-item">Melchi Lloyd Aballe</li>
               <li href="https://github.com/tmttan03" class="list-group-item">Theressa Marie Tan</li>
+              <li href="https://github.com/sannycand" class="list-group-item">Sanny Candidier Jr.</li>
           </ul>
       </div>
 
