--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
               <li href="https://github.com/melchiaballe" class="list-group-item">Melchi Lloyd Aballe</li>
               <li href="https://github.com/tmttan03" class="list-group-item">Theressa Marie Tan</li>
               <li href="https://github.com/sannycand" class="list-group-item">Sanny Candidier Jr.</li>
+              <li href="https://github.com/hritikchaturvedi11/" class="list-group-item">Hritik Chaturvedi</li>
           </ul>
       </div>
 
