--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
               <li href="https://github.com/sannycand" class="list-group-item">Sanny Candidier Jr.</li>
               <li href="https://github.com/hritikchaturvedi11/" class="list-group-item">Hritik Chaturvedi</li>
               <li href="https://github.com/antonsison" class="list-group-item">Anton Iñaki Sison</li>
+              <li href="https://github.com/vokeynick" class="list-group-item">Nick Vokey</li>
           </ul>
       </div>
 
