Completed all the three tasks

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
               <li href="https://github.com/hritikchaturvedi11/" class="list-group-item">Hritik Chaturvedi</li>
               <li href="https://github.com/antonsison" class="list-group-item">Anton Iñaki Sison</li>
               <li href="https://github.com/vokeynick" class="list-group-item">Nick Vokey</li>
+	      <li href="https://github.com/Shashank2808" class="list-group-item">Shashank Kesharwani</li>
           </ul>
       </div>
 
