--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <ul class="list-group">
               <li href="https://github.com/jerumbaoa" class="list-group-item">Jerome Rumbaoa</li>
               <li href="https://github.com/melchiaballe" class="list-group-item">Melchi Lloyd Aballe</li>
-              <li href="https://github.com/tmttan03" class="list-group-item">Theressa Marie Tan</li>
+		  <li href="https://github.com/tmttan03" class="list-group-item">Theressa Marie Tan</li>
               <li href="https://github.com/sannycand" class="list-group-item">Sanny Candidier Jr.</li>
               <li href="https://github.com/hritikchaturvedi11/" class="list-group-item">Hritik Chaturvedi</li>
               <li href="https://github.com/antonsison" class="list-group-item">Anton Iñaki Sison</li>
@@ -25,6 +25,7 @@
               <li href="https://github.com/creaturenex" class="list-group-item">Oscar Romero</li>
               <li href="https://github.com/Tamanna24" class="list-group-item">Tamanna Rajput</li>
 	            <li href="https://github.com/Shashank2808" class="list-group-item">Shashank Kesharwani</li>
+	      <li href="https://github.com/fast-and-curious-1910" class="list-group-item">Palash Sureka</li>
           </ul>
       </div>
 
