--- a/2k20/index2020.html
+++ b/2k20/index2020.html
@@ -13,7 +13,7 @@
   <body>
 
       <div class="container">
-          <h2>HACKTOBERFEST 2K20 CONTRIBUTORS</h2>
+          <h2>HACKTOBERFEST 2K21 CONTRIBUTORS</h2>
           <ul class="list-group">
               <li href="https://github.com/jerumbaoa" class="list-group-item">Jerome Rumbaoa</li>
               <li href="https://github.com/melchiaballe" class="list-group-item">Melchi Lloyd Aballe</li>
@@ -24,6 +24,7 @@
               <li href="https://github.com/vokeynick" class="list-group-item">Nick Vokey</li>
               <li href="https://github.com/creaturenex" class="list-group-item">Oscar Romero</li>
               <li href="https://github.com/Tamanna24" class="list-group-item">Tamanna Rajput</li>
+	      <li href="https://github.com/sgc-2924" class="list-group-item">Shriraj Chinchwade</li>
 	            <li href="https://github.com/Shashank2808" class="list-group-item">Shashank Kesharwani</li>
           </ul>
       </div>
