added name index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <h2>HACKTOBERFEST 2K21 CONTRIBUTORS</h2>
           <ul class="list-group">
               <li href="https://github.com/jerumbaoa" class="list-group-item">Jerome Rumbaoa</li>
+			  <li href="https://github.com/jhoserpacheco" class="list-group-item"><a href="https://github.com/jhoserpacheco">Jhoser Pacheco</a></li>
           </ul>
       </div>
 
