add profile link

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <div class="container">
           <h2>HACKTOBERFEST 2K21 CONTRIBUTORS</h2>
           <ul class="list-group">
-              <li href="https://github.com/jerumbaoa" class="list-group-item">Jerome Rumbaoa</li>
-			  <li href="https://github.com/jhoserpacheco" class="list-group-item"><a href="https://github.com/jhoserpacheco">Jhoser Pacheco</a></li>
+            <li class="list-group-item"><a href="https://github.com/jerumbaoa">Jerome Rumbaoa</a></li>
+			      <li class="list-group-item"><a href="https://github.com/jhoserpacheco">Jhoser Pacheco</a></li>
           </ul>
       </div>
 
