--- a/index.html
+++ b/index.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-      <title>Hacktoberfest</title>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <title>Hacktoberfest</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   </head>
 
   <body>
-
-      <div class="container">
-          <h2>HACKTOBERFEST 2K21 CONTRIBUTORS</h2>
-          <ul class="list-group">
-            <li class="list-group-item"><a href="https://github.com/jerumbaoa">Jerome Rumbaoa</a></li>
-			      <li class="list-group-item"><a href="https://github.com/jhoserpacheco">Jhoser Pacheco</a></li>
-          </ul>
-      </div>
-
+    <div class="container">
+      <h2>HACKTOBERFEST 2K21 CONTRIBUTORS</h2>
+      <ul class="list-group">
+        <li class="list-group-item">
+          <a href="https://github.com/jerumbaoa">Jerome Rumbaoa</a>
+        </li>
+        <li class="list-group-item">
+          <a href="https://github.com/jhoserpacheco">Jhoser Pacheco</a>
+        </li>
+        <li class="list-group-item">
+          <a href="https://github.com/RoyalTechie">Digvijaysing Rajput</a>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
