--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <ul class="list-group">
             <li class="list-group-item"><a href="https://github.com/jerumbaoa">Jerome Rumbaoa</a></li>
 			      <li class="list-group-item"><a href="https://github.com/jhoserpacheco">Jhoser Pacheco</a></li>
+            <li class="list-group-item"><a href="https://github.com/RoyalTechie">Digvijaysing Rajput</a></li>
           </ul>
       </div>
 
