--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li class="list-group-item"><a href="https://github.com/jerumbaoa">Jerome Rumbaoa</a></li>
 			      <li class="list-group-item"><a href="https://github.com/jhoserpacheco">Jhoser Pacheco</a></li>
             <li class="list-group-item"><a href="https://github.com/RoyalTechie">Digvijaysing Rajput</a></li>
+		  <li class="list-group-item"><a href="https://github.com/BENEDICT9845">Prajwal Benedict A</a></li>
           </ul>
       </div>
 
