--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <li class="list-group-item"><a href="https://github.com/jerumbaoa">Jerome Rumbaoa</a></li>
 			      <li class="list-group-item"><a href="https://github.com/jhoserpacheco">Jhoser Pacheco</a></li>
             <li class="list-group-item"><a href="https://github.com/RoyalTechie">Digvijaysing Rajput</a></li>
-	 <li class="list-group-item"><a href="https://github.com/BENEDICT9845">Prajwal Benedict A</a></li>
+	          <li class="list-group-item"><a href="https://github.com/BENEDICT9845">Prajwal Benedict A</a></li>
+            <li class="list-group-item"><a href="https://github.com/Champforfun">Champ</a></li>
           </ul>
       </div>
 
