--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 			      <li class="list-group-item"><a href="https://github.com/jhoserpacheco">Jhoser Pacheco</a></li>
             <li class="list-group-item"><a href="https://github.com/RoyalTechie">Digvijaysing Rajput</a></li>
 	 <li class="list-group-item"><a href="https://github.com/BENEDICT9845">Prajwal Benedict A</a></li>
-          </ul>
+   <li class="list-group-item"><a href="https://github.com/Champforfun">Champ</a></li>
+
+  </ul>
       </div>
 
   </body>
