--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
             <li class="list-group-item"><a href="https://github.com/jerumbaoa">Jerome Rumbaoa</a></li>
 			      <li class="list-group-item"><a href="https://github.com/jhoserpacheco">Jhoser Pacheco</a></li>
             <li class="list-group-item"><a href="https://github.com/RoyalTechie">Digvijaysing Rajput</a></li>
-	 <li class="list-group-item"><a href="https://github.com/BENEDICT9845">Prajwal Benedict A</a></li>
-   <li class="list-group-item"><a href="https://github.com/Champforfun">Champ</a></li>
+            <li class="list-group-item"><a href="https://github.com/BENEDICT9845">Prajwal Benedict A</a></li>
+            <li class="list-group-item"><a href="https://github.com/Champforfun">Champ</a></li>
+            <li class="list-group-item"><a href="https://github.com/GNvageesh">GN Vageesh</a></li>
 
   </ul>
       </div>
