--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li class="list-group-item"><a href="https://github.com/RoyalTechie">Digvijaysing Rajput</a></li>
             <li class="list-group-item"><a href="https://github.com/BENEDICT9845">Prajwal Benedict A</a></li>
             <li class="list-group-item"><a href="https://github.com/Champforfun">Champ</a></li>
+              <li class="list-group-item"><a href="https://github.com/SaumyaBhushan">Saumya</a></li>
             <li class="list-group-item"><a href="https://github.com/GNvageesh">GN Vageesh</a></li>
 
   </ul>
