initial commit for hacktoberfest 2023

--- a/2k22/index.html
+++ b/2k22/index.html
@@ -15,7 +15,7 @@
       <div class="container">
           <h2>HACKTOBERFEST 2K22 CONTRIBUTORS</h2>
           <ul class="list-group">
-            <li class="list-group-item"></li>
+            <li class="list-group-item"><a href="https://github.com/jerumbaoa">Jerome Rumbaoa</a></li>
           </ul>
       </div>
 
