--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <h2>HACKTOBERFEST 2K23 CONTRIBUTORS</h2>
           <ul class="list-group">
             <li class="list-group-item"><a href="https://github.com/jerumbaoa">Jerome Rumbaoa</a></li>
+              <li class="list-group-item"><a href="https://github.com/agaramudhala">agaramudhala</a></li>
           </ul>
       </div>
 
