Add system status checker script

--- a/2k23/index.html
+++ b/2k23/index.html
@@ -17,6 +17,7 @@
           <ul class="list-group">
             <li class="list-group-item"><a href="https://github.com/jerumbaoa">Jerome Rumbaoa</a></li>
               <li class="list-group-item"><a href="https://github.com/agaramudhala">agaramudhala</a></li>
+              <li class="list-group-item"><a href="https://github.com/ShayanTofique">Shayan Tofique</a></li>
           </ul>
       </div>
 
